--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Higher-Lower game with spotify followers"
+      content="Higher-Lower game for spotify followers"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/spotify-high-low.png" />
     <!--
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/therealsharath/spotify-higher-lower/gh-pages/spty-pic.JPG">
     <title>Spotify Higer-Lower</title>
   </head>
   <body scroll="no">
